rust/macros/tests/invalid/target/debug/deps/single_argument-68ebf797c6faa28e.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/single_argument-68ebf797c6faa28e.d: single_argument.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libsingle_argument-68ebf797c6faa28e.rmeta: single_argument.rs Cargo.toml

single_argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
